<resources>
    <string name="app_name">MyKotlinDemo</string>

    <string name="page_home">首页</string>
    <string name="page_type">分类</string>
    <string name="page_message">消息</string>
    <string name="page_my">我的</string>

    <string name="btn_login">登录</string>
    <string name="btn_register">注册</string>
    <string name="btn_forget_password">忘记密码</string>
    <string name="btn_remember_password">记住密码</string>
    <string name="btn_submit">提交</string>
    <string name="btn_save">保存</string>
    <string name="btn_determine">确定</string>
    <string name="btn_cancel">取消</string>
    <string name="btn_upload">上传</string>
    <string name="btn_select">选择</string>

    <string name="hint_username">手机/账号/邮箱</string>
    <string name="hint_password">密码</string>
    <string name="hint_search">名称</string>
</resources>
